2004-11-27  Alan Modra  <amodra@bigpond.net.au>

	PR target/12769
	* config/rs6000/rs6000.c (init_cumulative_args): Set call_cookie
	from rs6000_default_long_calls for libcalls.

	PR target/18686
	* config/rs6000/rs6000-c.c (rs6000_pragma_longcall): Use
	integer_zerop and integer_onep instead of comparing against
	canonical trees.

2004-11-25  Richard Henderson  <rth@redhat.com>

	PR c++/6764
	* reload1.c (set_initial_eh_label_offset): New.
	(set_initial_label_offsets): Use it.

2004-11-26  Alan Modra  <amodra@bigpond.net.au>

	PR rtl-optimization/16356
	* config/rs6000/rs6000.md (floatdisf2_internal2): Rewrite with
	separate output register and one less jump.  Enable for powerpc64.
	(floatdisf2): Adjust for above.

2004-11-25  Ralf Corsepius <ralf.corsepius@rtems.org>

	* config.gcc (avr-*-rtems*): Fix typo.

2004-11-24  Uros Bizjak  <uros@kss-loka.si>

	PR rtl-optimization/18614
	* simplify-rtx.c (simplify_binary_operation): Do not
	simplify inner elements of constant arguments of
	VEC_CONCAT insn.

2004-11-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	Backport from mainline:
	2004-10-18  Eric Botcazou  <ebotcazou@libertysurf.fr>
	            Roger Sayle  <roger@eyesopen.com>

	PR middle-end/17813
	* dojump.c (discard_pending_stack_adjust): New function.
	(clear_pending_stack_adjust): Call it.
	* expr.h (discard_pending_stack_adjust): Declare it.
	* explow.c (emit_stack_save): Emit pending stack adjustments
	before saving the stack pointer.
	(emit_stack_restore): Discard pending stack adjustments before
	restoring the stack pointer.

2004-11-23  Ralf Corsepius <ralf.corsepius@rtems.org>

	* config/c4x/t-rtems: New.
	* config.gcc: Reflect having added c4x/t-rtems.

2004-11-23  Ralf Corsepius <ralf.corsepius@rtems.org>

	* config/arm/t-rtems: New.
	* config.gcc: Reflect having added arm/t-rtems.

2004-11-23  Ralf Corsepius <ralf.corsepius@rtems.org>

	* config.gcc: Add avr-*-rtems*.
	* config/avr/t-rtems: New.
	* config/avr/rtems.h: New.
